# Library_management_system

./: .gitignore  CMakeLists.txt  main.cpp
Resource/: res.qrc
database/: CustomSqlQueryModel.cpp  CustomSqlQueryModel.h  StudentSqlModel.cpp  StudentSqlModel.h  database.cpp  database.h  database.ui  studentSqlQueryModel.cpp  studentSqlQueryModel.h
include/: addbookdialog.h  addstudentdialog.h  admin_main.h  editbookdialog.h  editstudentdialog.h  library_login.h  login_ad.h  login_st.h  stu_main.h
src/: addbookdialog.cpp  addbookdialog.ui  addstudentdialog.cpp  addstudentdialog.ui  admin_main.cpp  admin_main.ui  editbookdialog.cpp  editbookidalog.ui  editstudentdialog.cpp  editstudentdialog.ui  library_login.cpp  library_login.ui  login_ad.cpp  login_ad.ui  login_st.cpp  login_st.ui  stu_main.cpp  stu_main.ui
